--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
         <li><code>/filter_properties/?city=Hyderabad</code> - Filter properties by city</li>
         <li><code>/filter_properties/?locality=Gachibowli</code> - Filter properties by locality</li>
         <li><code>/filter_properties/?pincode=500032</code> - Filter properties by pincode</li>
-        <li><code>/filter_properties/?bhk=2</code> - Filter properties by number of bedrooms</li>
-        <li><code>/properties_near_location/?lat=17.3850&lng=78.4867&radius=5</code> - Properties near a location</li>
-        <li><code>/properties_near_metro/?station=Madhapur</code> - Properties near a metro station</li>
-        <li><code>/rera_approved_properties/</code> - Get RERA-approved properties</li>
-        <li><code>/market_value/?locality=Kondapur</code> - Get market value of properties</li>
-        <li><code>/properties_near_it_hubs/?hub=Hitec City</code> - Properties near IT hubs</li>
-        <li><code>/budget_properties/?locality=Kukatpally&budget=5000000</code> - Filter budget properties</li>
+        <li><code>/filter_properties/?bedrooms=2</code> - Filter properties by number of bedrooms</li>
+        <li><code>/properties_near_metro_station?station_name=miyapur&radius=1.25</code> - Properties near a metro station</li>
+        <li><code>rera_approved?location=miyapur</code> - Get RERA-approved properties</li>
+        <li><code>/market_value/?location=gachibowli</code> - Get market value of properties</li>
+        <li><code>/properties_near_it_hub?hub_name=Financial%20District&radius=2.0</code> - Properties near IT hubs</li>
+        <li><code>/budget_properties/?locality=miyapur&budget-7000</code> - Filter budget properties</li>
         <li><code>/available_properties/?location=miyapur</code> - EMI calculator</li>
-        <li><code>/pre_approved_loans/?user_id=12345</code> - Get pre-approved loan process details</li>
     </ul>
     <p>Modify the parameters as needed to refine your search.</p>
 </body>
