--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><code>/market_value/?location=gachibowli</code> - Get market value of properties</li>
         <li><code>/properties_near_it_hub?hub_name=Financial%20District&radius=2.0</code> - Properties near IT hubs</li>
         <li><code>/budget_properties/?locality=miyapur&budget-7000</code> - Filter budget properties</li>
-        <li><code>/available_properties/?location=miyapur</code> - EMI calculator</li>
+        <li><code>/available_properties/?location=miyapur</code> - Available properties in Loaction</li>
     </ul>
     <p>Modify the parameters as needed to refine your search.</p>
 </body>
