--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <h1>Welcome to Real Estate Properties API Home Page</h1>
     <p>Use the following endpoints in the URL to obtain desired results:</p>
     <ul>
-        <li><code>/filter_properties/?city=Hyderabad</code> - Filter properties by city</li>
-        <li><code>/filter_properties/?locality=Gachibowli</code> - Filter properties by locality</li>
-        <li><code>/filter_properties/?pincode=500032</code> - Filter properties by pincode</li>
-        <li><code>/filter_properties/?bedrooms=2</code> - Filter properties by number of bedrooms</li>
+        <li><code>/filter_properties?city=Hyderabad</code> - Filter properties by city</li>
+        <li><code>/filter_properties?locality=Gachibowli</code> - Filter properties by locality</li>
+        <li><code>/filter_properties?pincode=500032</code> - Filter properties by pincode</li>
+        <li><code>/filter_properties?bedrooms=2</code> - Filter properties by number of bedrooms</li>
         <li><code>/properties_near_metro_station?station_name=miyapur&radius=1.25</code> - Properties near a metro station</li>
         <li><code>rera_approved?location=miyapur</code> - Get RERA-approved properties</li>
-        <li><code>/market_value/?location=gachibowli</code> - Get market value of properties</li>
+        <li><code>/market_value?location=gachibowli</code> - Get market value of properties</li>
         <li><code>/properties_near_it_hub?hub_name=Financial%20District&radius=2.0</code> - Properties near IT hubs</li>
-        <li><code>/budget_properties/?locality=miyapur&budget-7000</code> - Filter budget properties</li>
-        <li><code>/available_properties/?location=miyapur</code> - Available properties in Loaction</li>
+        <li><code>/budget_properties?locality=miyapur&budget-7000</code> - Filter budget properties</li>
+        <li><code>/available_properties?location=miyapur</code> - Available properties in Loaction</li>
     </ul>
     <p>Modify the parameters as needed to refine your search.</p>
 </body>
